<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GPSActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/reconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/reconnect"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/border_end_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/border_view"
        app:srcCompat="@drawable/ic_border" />

    <ImageView
        android:id="@+id/border_view"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_border_end" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_input_view"
        app:layout_constraintEnd_toStartOf="@+id/phone_number_input_view"
        app:layout_constraintTop_toTopOf="@+id/phone_number_input_view"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_border" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/border_end_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gpsValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_status_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/latitudeItemTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gpsItemTextView" />

                <TextView
                    android:id="@+id/gpsItemTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_gps"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/latitudeItemTextView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/latitudeItemTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_latitude"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/longitudeItemTextView"
                    app:layout_constraintStart_toEndOf="@+id/gpsValueTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/latitudeValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_value_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/longitudeItemTextView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/gpsValueTextView"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeItemTextView" />

                <TextView
                    android:id="@+id/longitudeItemTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_longitude"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/latitudeItemTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/longitudeValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_value_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/latitudeItemTextView"
                    app:layout_constraintTop_toBottomOf="@+id/longitudeItemTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/motionXValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_status_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="@+id/motionXText"
                    app:layout_constraintStart_toStartOf="@+id/motionXText"
                    app:layout_constraintTop_toBottomOf="@+id/motionXText" />

                <TextView
                    android:id="@+id/motionXText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_x_ms"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/motionYText"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/motionYText" />

                <TextView
                    android:id="@+id/motionYText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_y_ms"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/motionZText"
                    app:layout_constraintStart_toEndOf="@+id/motionXText"
                    app:layout_constraintTop_toTopOf="@+id/motionZText" />

                <TextView
                    android:id="@+id/motionYValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_value_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/motionYText"
                    app:layout_constraintStart_toStartOf="@+id/motionYText"
                    app:layout_constraintTop_toBottomOf="@+id/motionYText" />

                <TextView
                    android:id="@+id/motionZText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_z_ms"
                    android:textAlignment="center"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/motionYText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/motionZValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_value_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/motionZText"
                    app:layout_constraintTop_toBottomOf="@+id/motionZText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toStartOf="@+id/reconnect_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />
</androidx.constraintlayout.widget.ConstraintLayout>